# information-theory

./: .gitignore  assignment_1.ipynb  assignment_2.ipynb  decode_corpus_without_k.py  decode_disco_without_k.py  encode_corpus_with_k.py  encode_corpus_without_k.py  encode_disco_with_k.py  encode_disco_without_k.py
Python/: README.md
Python/compression/: __init__.py  helpers.py  lzw.py
Python/test/: test_lzw.py
Python/test/data/: encoded_abracadabra.8  encoded_abracadabra.pickle
Rust/: Cargo.toml
Rust/src/: bitstream.rs  lib.rs  lzw.rs
compression/: helpers.py  lzw.py
test/: test_lzw.py
